samples/_failures_safe/1761502679_8bde4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_830b40fa.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_830b40fa.c:169:21: error: expected ‘;’ at end of input
  169 |         token->value
      |                     ^
      |                     ;
./samples/SAFE/__tmp_830b40fa.c:169:9: error: expected declaration or statement at end of input
  169 |         token->value
      |         ^~~~~
./samples/SAFE/__tmp_830b40fa.c:169:9: error: expected declaration or statement at end of input
